--- a/javascript.html
+++ b/javascript.html
@@ -10,8 +10,10 @@ title: javascript
 
 <p id="demo"></p>
 <script type="text/javascript">
-var myElement = document.getElementById("intro");
-document.getElementById("demo").innerHTML =
-"The text from the intro paragraph is " + myElement.innerHTML;
+function myfunction(title) {
+}
+var a = 124;
+var b = 123
+
 
 </script>
