--- a/_posts/2017-01-16-juju stroy.html
+++ b/_posts/2017-01-16-juju stroy.html
@@ -3,5 +3,5 @@ layout: post
 title: "쭈쭈의 홈페이지 만들기"
 category: blog
 ---
-<p>쭈주의 이야기 입니다. </p>
+<p>쭈주의 이기 입니다. </p>
 <img class='post-img'  src="/assets/images/juju/juju.jpg" alt="">
